dataset1235/2025-2/610742602/users/59982477/executions/677928262_2383239197.log
== SUBMISSION (2025-08-28 03:43:43)
-- CODE: 
import math 
#Lendo as entradas 
a = float(input())
b = float(input())
gamma_graus = float(input())

#Convertendo o ângulo de graus para radianos
gamma_rad = math.radians(gamma_graus)

#Calculando a distancia usando a lei dos cossenos 
c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_rad))

#Imprimindo a distância com 2 casas decimais
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:42:16)
-- CODE: 
import math 
#Lendo as entradas 
a = float(input())
b = float(input())
gamma_graus = float(input())

#Convertendo o ângulo de graus para radianos
gamma_rad = math.radians(gamma_rad)

#Calculando a distancia usando a lei dos cossenos 
c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_rad))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    gamma_rad = math.radians(gamma_rad)
                             ^^^^^^^^^
NameError: name 'gamma_rad' is not defined. Did you mean: 'gamma_graus'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:41:28)
-- CODE: 
import math 
#Lendo as entradas 
a = float(input())
b = float(input())
gamma_rad = float(input())

#Convertendo o ângulo de graus para radianos
gamma_rad = math.radians(gamma_rad)
#Calculando a distancia usando a lei dos cossenos 
c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_rad))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
None
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
None
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
None
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
None
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
None
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:42:47)
-- CODE: 
import math 
#Lendo as entradas 
a = float(input())
b = float(input())
gamma_graus = float(input())

#Convertendo o ângulo de graus para radianos
gamma_rad = math.radians(gamma_graus)

#Calculando a distancia usando a lei dos cossenos 
c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_rad))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
None
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
None
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
None
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
None
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
None
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
